# ferroleaf

./: .gitignore  Cargo.toml  README.md  build.rs  install.sh
assets/fonts/: README.txt
src/: app.rs  compiler.rs  dialog.rs  editor.rs  file_tree.rs  icons.rs  main.rs  pdf_viewer.rs  project.rs  synctex.rs  theme.rs
